Psychat IRC-Web 연동 완료 (MVP수준)

--- a/Goonrak/Goonrak/templates/home.html
+++ b/Goonrak/Goonrak/templates/home.html
@@ -26,6 +26,12 @@
             </a>
             <h4>Scoreboard</h4>
         </li>
+        <li class="span4">
+        	<a href="/psychat/" class="thumnail">
+        		psychatimage here
+        	</a>
+        	<h4>Psychat!</h4>
+        </li>
     </ul>
     {% if user.username %}
     <div class="row-fluid">
