psyChat에 콘테이너 넣고 스크롤링 구현함 javascript로 채팅 내용이 업데이트 될때마다 스크롤을 아래로 고정시키는 동작 구현이 필요함. 지금 접속중인 사람들의 목록을 보여주는 콘테이너도 필요함. 추가구현 바랍니다 ^^;

--- a/Goonrak/Goonrak/templates/home.html
+++ b/Goonrak/Goonrak/templates/home.html
@@ -8,27 +8,27 @@
         <p>Wargame presented by Guardian</p>
     </div>
     <ul class="row-fluid">
-        <li class="span4">
+        <li class="span3">
             <a href="#" class="thumbnail">
                 <img src="holder.js/300x200" alt="">
             </a>
             <h4>Studies</h4>
         </li>
-        <li class="span4">
+        <li class="span3">
             <a href="#" class="thumbnail">
                 <img src="holder.js/300x200" alt="">
             </a>
             <h4>Practices</h4>
         </li>
-        <li class="span4">
+        <li class="span3">
             <a href="#" class="thumbnail">
                 <img src="holder.js/300x200" alt="">
             </a>
             <h4>Scoreboard</h4>
         </li>
-        <li class="span4">
+        <li class="span3">
         	<a href="/psychat/" class="thumnail">
-        		psychatimage here
+        		<img src="holder.js/300x200" alt="">
         	</a>
         	<h4>Psychat!</h4>
         </li>
