--- a/Goonrak/PsyChat/templates/psychat.html
+++ b/Goonrak/PsyChat/templates/psychat.html
@@ -118,13 +118,17 @@
 </head>
 
 <body>
-<ul id="chat_view">
+    <ul id="chat_view" class="container" style="max-height: 500px;overflow: scroll;">
 	<li group=1>goorak test</li>
 </ul>
 
-<form id="message_send_form" method="post" onsubmit="return false;">
-<input type="text" id="message_input"></input>
-</form>
+<div class="container">
+    <form id="message_send_form" method="post" onsubmit="return false;">
+        <input type="text" id="message_input"></input>
+    </form>
+</div>
+
+
 
 </body>
 
