--- a/Goonrak/assets/css/bootstrap.more.css
+++ b/Goonrak/assets/css/bootstrap.more.css
@@ -9,3 +9,4 @@ body, input, button, select, textarea { font-family: "Helvetica Neue", Helvetica
 .span12 { text-align: center; margin-bottom: 60px; }
 footer { text-align: center; }
 h2, h3 { margin-top: 40px; }
+.chatcontainer { padding: 30px 0; max-width: 800px; max-height: 700px;}
